--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -20,16 +20,16 @@ block main
                 name="title"
                 required
                 )
-        div(class = "form-group")
+        div(class = "form-group ")
             label(for="desc") Mô tả  
             textarea(
                 type="text"
-                class="form-control"
+                class="form-control textarea-mce"
                 id="desc"
                 name="description"
                 rows="5"
                 )
-        div(class = "form-group")
+        div(class = "form-group ")
             label(for="price")  Giá
             input(
                 type="number"
