--- a/views/admin/mixins/table-tree.pug
+++ b/views/admin/mixins/table-tree.pug
@@ -8,15 +8,15 @@ mixin table-tree(items, level =1)
                     name="id"
                     value=item.id
                 )
-            td #{index + 1}
+            td #{item.index}
             td 
                 img(
                     src=item.thumbnail
                     alt =item.title
                     width="100px"
-                    height="auto"
+                    height="auto" 
                 )
-            td #{item.title}
+            td #{prefix}#{item.title}
             td 
                 input(
                     type="number"
