--- a/views/admin/pages/product-category/edit.pug
+++ b/views/admin/pages/product-category/edit.pug
@@ -1,14 +1,14 @@
 extends ../../layout/default.pug
 include ../../mixins/alert.pug
+include ../../mixins/select-tree.pug
 
 block main 
-    +alert-success(3000)
     +alert-error(3000)
-    h1(class="mb-4") Chỉnh sửa một sản phẩm 
+    h1(class="mb-4") Thêm mới danh mục sản phẩm 
     form(
-        action=`${prefixAdmin}/product/edit/${product.id}?_method=PATCH`
+        action=`${prefixAdmin}/product-category/edit/${data.id}?_method=PATCH`
         method="POST"
-        id="form-edit-product"
+        id="form-create-category"
         enctype="multipart/form-data"
         runat="server"
     ) 
@@ -19,10 +19,20 @@ block main
                 class="form-control"
                 id="title"
                 name="title"
+                value = data.title
                 required
-                value=product.title
                 )
-        div(class = "form-group")
+        div(class = "form-group ")
+            label(for="parent_id")  Danh mục cha
+            select(
+                name="parent_id"
+                id="parent_id"
+                class="form-control"
+            ) 
+             option(value="") -- Chọn danh mục cha --
+             if(record)
+                +select-tree(record,1,data.parent_id)
+        div(class = "form-group ")
             label(for="desc") Mô tả  
             textarea(
                 type="text"
@@ -30,37 +40,7 @@ block main
                 id="desc"
                 name="description"
                 rows="5"
-                ) !{product.description}
-        div(class = "form-group")
-            label(for="price")  Giá
-            input(
-                type="number"
-                class="form-control"
-                id="price"
-                name="price"
-                value=product.price
-                min ="0"
-                )
-            iv(class = "form-group")
-            label(for="dicount") % Giảm Giá
-            input(
-                type="number"
-                class="form-control"
-                id="dicount"
-                name="discountPercentage"
-                value=product.discountPercentage
-                min = "0"
-                )
-        div(class = "form-group")
-            label(for="stock")   Số lượng 
-            input(
-                type="number"
-                class="form-control"
-                id="stock"
-                name="stock"
-                value=product.stock
-                min ="0"
-                )
+                ) !{data.description}
         div(
             class = "form-group"
             upload-image
@@ -75,7 +55,7 @@ block main
                 upload-image-input
                 )
             img(
-                src= product.thumbnail
+                src=data.thumbnail
                 upload-image-preview
                 class="image-preview"
             )
@@ -88,7 +68,7 @@ block main
                 name="position"
                 placeholder="Tự động tăng"
                 min="1"
-                value=product.position
+                value = data.position
                 )
         div(class="form-group form-check form-check-inline")
             input(
@@ -97,7 +77,7 @@ block main
                 id="statusActive"
                 name="status"
                 value="active"
-                checked=(product.status == "active" ? true:false)
+                checked=(data.status == "active" ? true:false)
                 )
             label(for="statusActive" class="form-check-label") Hoạt động 
         div(class="form-group form-check form-check-inline")
@@ -107,7 +87,7 @@ block main
                 id="statusInActive"
                 name="status"
                 value="inactive"
-                checked=(product.status == "inactive" ? true:false)
+                checked=(data.status == "inactive" ? true:false)
 
                 )
             label(for="statusInActive" class="form-check-label") Dừng hoạt động 
@@ -117,7 +97,6 @@ block main
             class="btn btn-primary"
             ) Cập nhật 
         
-    
 
     script(src="/admin/js/product.js") 
     script(src="/admin/js/script.js") 
