--- a/views/admin/pages/products/detail.pug
+++ b/views/admin/pages/products/detail.pug
@@ -8,6 +8,8 @@ block main
         div(class="mb-4") Giảm giá: <b>#{product.discountPercentage}%</b>
     if(product.stock)
         div(class="mb-4") Còn lại: <b>#{product.stock}</b>
+    if(product.position)
+        div(class="mb-4") Còn lại: <b>#{product.position}</b>
     if(product.thumbnail)
         div(class="mb-4") 
             img(
