--- a/views/admin/pages/products/detail.pug
+++ b/views/admin/pages/products/detail.pug
@@ -1,5 +1,6 @@
 extends ../../layout/default.pug
 block main 
+  if(role.permissions.includes("products_view"))
     if(product.title)
         h1(class="mb-4") #{product.title}
     if(product.price)
