--- a/views/admin/pages/account/create.pug
+++ b/views/admin/pages/account/create.pug
@@ -2,6 +2,7 @@ extends ../../layout/default.pug
 include ../../mixins/alert.pug
 include ../../mixins/select-tree.pug
 block main 
+ if(role.permissions.includes("account_create"))
     +alert-success(3000)
     +alert-error(3000)
     h1(class="mb-4") Thêm mới một tài khoản mới
