--- a/views/admin/pages/account/edit.pug
+++ b/views/admin/pages/account/edit.pug
@@ -2,6 +2,7 @@ extends ../../layout/default.pug
 include ../../mixins/alert.pug
 include ../../mixins/select-tree.pug
 block main 
+  if(role.permissions.includes("account_edit"))
     +alert-success(3000)
     +alert-error(3000)
     h1(class="mb-4") Cập nhật tài khoản
