--- a/views/admin/pages/dashboard/index.pug
+++ b/views/admin/pages/dashboard/index.pug
@@ -1,3 +1,7 @@
 extends ../../layout/default.pug
 block main
     h1 Trang tổng quan 
+    div #{user}
+    div ------------------------------
+    div #{role.title}
+    div #{role.permissions}
