--- a/views/admin/pages/product-category/edit.pug
+++ b/views/admin/pages/product-category/edit.pug
@@ -3,6 +3,7 @@ include ../../mixins/alert.pug
 include ../../mixins/select-tree.pug
 
 block main 
+ if(role.permissions.includes("products-category_edit"))
     +alert-error(3000)
     h1(class="mb-4") Thêm mới danh mục sản phẩm 
     form(
