--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -2,6 +2,7 @@ extends ../../layout/default.pug
 include ../../mixins/alert.pug
 include ../../mixins/select-tree.pug
 block main 
+ if(role.permissions.includes("products_create"))
     +alert-error(3000)
     h1(class="mb-4") Thêm mới một sản phẩm 
     form(
