--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -5,7 +5,9 @@ include ../../mixins/pagination
 include ../../mixins/form-change-multi
 include ../../mixins/alert
 include ../../mixins/sort
+include ../../mixins/moment
 block main
+
   if(role.permissions.includes("products_view"))
     +alert-success("5000")
     h1 Danh sách sản phẩm
@@ -53,6 +55,7 @@ block main
                             th Tiêu đề
                             th Giá
                             th Vị trí
+                            th Người tạo 
                             th Trạng thái 
                             th Hành động
 
@@ -83,6 +86,11 @@ block main
                                         min="1"
                                         name = "position"
                                     )
+                                td
+                                    p #{item.accountFullName}
+                                    p 
+                                    +formatDateTime(item.createdBy.createAt)
+                                   
                                 td 
                                     if(role.permissions.includes("products_edit"))
                                         if(item.status == "active")
