--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -1,3 +1,4 @@
+include ./../mixins/sub-menu.pug
 header.header
     .container  
       .row.align-item-center 
@@ -11,5 +12,9 @@ header.header
                 ul 
                     li 
                         a(href="/") Trang chủ
-                    li 
-                        a(href="/products") Sản phẩm 
+                    li(class="sub-menu") 
+                        -const pathProduct = "/products";
+                        a(href=pathProduct) Sản phẩm 
+                        +sub-menu(layoutProductsCategory,pathProduct)
+                      
+                             
