--- a/views/admin/pages/products/create.pug
+++ b/views/admin/pages/products/create.pug
@@ -40,6 +40,25 @@ block main
                 name="description"
                 rows="5"
                 )
+        div(class="form-group form-check form-check-inline")
+            input(
+                type="radio"
+                class="form-check-input"
+                id="featured1"
+                name="featured"
+                value="1"   
+                )
+            label(for="featured1" class="form-check-label") Nổi bật  
+        div(class="form-group form-check form-check-inline")
+            input(
+                type="radio"
+                class="form-check-input"
+                id="featured0"
+                name="featured"
+                value="0"
+                checked
+                )
+            label(for="featured0" class="form-check-label") Không
         div(class = "form-group ")
             label(for="price")  Giá
             input(
@@ -50,7 +69,7 @@ block main
                 value ="0"
                 min ="0"
                 )
-            iv(class = "form-group")
+        div(class = "form-group")
             label(for="dicount") % Giảm Giá
             input(
                 type="number"
