--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,11 +40,29 @@
 .product-item{
     border: 1px solid #ddd;
     border-radius: 8px;
+    height: 100%;
+}
+.product-item .inner-image{
+    width: 100%;
+    aspect-ratio: 4/3;
+    border-bottom: 1px solid #ddd;
+    position: relative;
 }
 .product-item .inner-image img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.product-item .inner-featured{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: green;
+    color: white;
+    padding: 3px 6px;
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 8px;
 }
 .product-item .inner-content{
     padding: 15px;
