--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -1,4 +1,18 @@
 extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
+include ../../mixins/product-layout.pug
 
 block main
-    h1 Trang chu 
+    .section-products-featuresd.my-5
+        .container.my-3
+            .row 
+                .col-12 
+                +box-head("Sản phẩm Nổi bật")
+            +product-grid(productFeature)
+
+    .section-products-featuresd.my-5
+        .container.my-3
+            .row 
+                .col-12 
+                +box-head("Sản phẩm mới")
+            +product-grid( productNew)
