trang chi tiet san pham

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,3 +124,49 @@
     display: block;
 }
 /* sub-menu */
+
+/* PRODUCT-DETAIL */
+.product-detail .inner-thumb img {
+    width: 100%;
+    height: auto;
+}
+.product-detail .inner-title {
+    font-size: 32px;
+    margin-bottom: 15px;
+}
+.product-detail .inner-category{
+    margin-bottom: 10px;
+}
+.product-detail .inner-price-new{
+    color: green;
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.product-detail .inner-price-old{
+    color: red;
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.product-detail .inner-percent{
+margin-bottom: 10px;
+}
+.product-detail .inner-percent span{
+    color: #fff;
+    background: red;
+    font-weight: 600 ;
+    display: "inline-block";
+
+}
+.product-detail .inner-stock{
+    margin-bottom: 10px;
+}
+.product-detail .inner-stock span{
+    color: #fff;
+    background: green;
+    font-weight: 600 ;
+    display: "inline-block";
+
+}
+/* end PRODUCT-DETAIL */
