--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -15,7 +15,7 @@ block main
                     if(product.category)
                     div(class="inner-category") 
                         span Danh mục: 
-                        a(href=`product/${product.category.slug}`) #{product.category.title}
+                        a(href=`products/${product.category.slug}`) #{product.category.title}
                     if(product.priceNew)
                     div(class="inner-price-new") #{product.priceNew}$
                     if(product.price)
