--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -6,8 +6,24 @@ header.header
             .inner-logo 
                 a(href="/")
                     img(src="https://res.cloudinary.com/dzn828afi/image/upload/v1731576958/gfqfepytvumnkd60kjcw.png", alt="logo")
-
-        .col-9 
+        .col-5 
+            form(
+                action="/search"
+                method="GET"
+            )
+                div(class="form-group d-flex mb-0")
+                    input(
+                        type="text"
+                        placeholder="Nhập từ khóa..."
+                        class="form-control"
+                        name="keyword"
+                        value=keyword
+                    )
+                    button(
+                        type="submit"
+                        class="btn btn-primary"
+                    ) Tìm
+        .col-4 
             .inner-menu 
                 ul 
                     li 
