--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,3 +170,38 @@ margin-bottom: 10px;
 
 }
 /* end PRODUCT-DETAIL */
+/* Show alert */
+[show-alert]{
+    position: fixed;
+    top: 70px;
+    right: 75px;
+    z-index: 9999;
+}
+[show-alert].alert-hidden{
+    animation-name: alert-hidden;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+}
+
+@keyframes alert-hidden {
+    from{
+        right: 15px;
+    }
+    to{
+        right: -100%;
+        display: none;
+    }
+    
+}
+[show-alert] [close-alert]{
+    background: #ffffffff;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
+    text-align: center;
+    font-weight: 600;
+    border-radius: 50%;
+    cursor: pointer;
+}
+/* End Show alert */
