--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -32,5 +32,6 @@ header.header
                         -const pathProduct = "/products";
                         a(href=pathProduct) Sản phẩm 
                         +sub-menu(layoutProductsCategory,pathProduct)
-                      
-                             
+                    li  
+                        a(href="/cart") Giỏ hàng (#{miniCart ? miniCart : 0 })
+                    
