--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -34,4 +34,6 @@ header.header
                         +sub-menu(layoutProductsCategory,pathProduct)
                     li  
                         a(href="/cart") Giỏ hàng (#{miniCart ? miniCart : 0 })
-                    
+                    li  
+                        a(href="/user/register") Đăng ký
+                        
