--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -35,5 +35,6 @@ header.header
                     li  
                         a(href="/cart") Giỏ hàng (#{miniCart ? miniCart : 0 })
                     li  
+                        a(href="/user/login") Đăng nhập
+                    li  
                         a(href="/user/register") Đăng ký
-                        
