--- a/views/client/pages/user/otp-password.pug
+++ b/views/client/pages/user/otp-password.pug
@@ -5,9 +5,9 @@ block main
     .container-my-5 
         .row.justify-content-center
             .col-8
-                h1(class="mb-4") Đăng nhập tài khoản
+                h1(class="text-center") Nhập mã OTP xác thực 
                 form(
-                    action=`/user/login`
+                    action=`/user/password/otp`
                     method="POST"
                 ) 
                     div(class = "form-group")
@@ -17,21 +17,21 @@ block main
                             class="form-control"
                             id="email"
                             name="email"
+                            value=email
                             required
                             )
-                    div(class = "form-group ")
-                        label(for="password") Mật khẩu   
+                    div(class = "form-group")
+                        label(for="otp") Mã OTP
                         input(
-                            type="password"
+                            type="number"
                             class="form-control"
-                            id="password"
-                            name="password"
+                            id="otp"
+                            name="otp"
                             required
                             )
                     div(class = "form-group")
                         button(
                         type="submit"
-                        class="btn btn-primary"
-                        ) Đăng nhập 
-                a(href="/user/password/forgot") Quên mật khẩu 
+                        class="btn btn-primary btn-block"
+                        ) Xác nhận
     
