--- a/views/client/pages/user/forgot-password.pug
+++ b/views/client/pages/user/forgot-password.pug
@@ -5,9 +5,9 @@ block main
     .container-my-5 
         .row.justify-content-center
             .col-8
-                h1(class="mb-4") Đăng nhập tài khoản
+                h1(class="text-center") Lấy lại mật khẩu
                 form(
-                    action=`/user/login`
+                    action=`/user/password/forgot`
                     method="POST"
                 ) 
                     div(class = "form-group")
@@ -19,19 +19,9 @@ block main
                             name="email"
                             required
                             )
-                    div(class = "form-group ")
-                        label(for="password") Mật khẩu   
-                        input(
-                            type="password"
-                            class="form-control"
-                            id="password"
-                            name="password"
-                            required
-                            )
                     div(class = "form-group")
                         button(
                         type="submit"
-                        class="btn btn-primary"
-                        ) Đăng nhập 
-                a(href="/user/password/forgot") Quên mật khẩu 
+                        class="btn btn-primary btn-block"
+                        ) Gửi mail xác nhận
     
