Lam phan cai dat chung trang admin

--- a/views/client/partials/footer.pug
+++ b/views/client/partials/footer.pug
@@ -1,2 +1,4 @@
 footer.footer 
-        copyright 2024 PhanAnh
+       div  #{settingGeneral.copyright}
+       div  #{settingGeneral.address} 
+       div  Số điện thoại #{settingGeneral.phone}
