--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -5,7 +5,7 @@ header.header
         .col-3
             .inner-logo 
                 a(href="/")
-                    img(src="https://res.cloudinary.com/dzn828afi/image/upload/v1731576958/gfqfepytvumnkd60kjcw.png", alt="logo")
+                    img(src=settingGeneral.logo, alt=settingGeneral.websiteName)
         .col-5 
             form(
                 action="/search"
