--- a/views/admin/pages/dashboard/index.pug
+++ b/views/admin/pages/dashboard/index.pug
@@ -1,7 +1,58 @@
 extends ../../layout/default.pug
 block main
     h1 Trang tổng quan 
-    div #{user}
-    div ------------------------------
-    div #{role.title}
-    div #{role.permissions}
+    .row.mt-4
+        .col-12 
+            .card.mb-4 
+                .card-header Thông tin tài khoản 
+                .card-body  
+                    if(user.avatar)
+                        img(
+                            src=user.avatar 
+                            style="height: 100px;margin-bottom: 15px;"
+                        )
+                    if(user.fullname)
+                        p Họ tên: <b>#{user.fullname}</b>
+                    if(user.email)
+                        p Họ tên: <b>#{user.email}</b> 
+                    if(user.phone)
+                        p Họ tên: <b>#{user.phone}</b> 
+                    if(user.title)
+                        p Họ tên: <b>#{user.title}</b> 
+
+        .col-6 
+            .card.mb-4 
+                .card-header Danh mục sản phẩm 
+                .card-body 
+                    p Số lượng: <b>#{statistic.categoryProduct.total}</b>
+                    p Hoạt động:  <b>#{statistic.categoryProduct.active}</b>
+                    p Dừng hoạt đông: <b>#{statistic.categoryProduct.inactive}</b>
+        
+        .col-6 
+            .card.mb-4 
+                .card-header Sản phẩm 
+                .card-body 
+                    p Số lượng: <b>#{statistic.products.total}</b>
+                    p Hoạt động:  <b>#{statistic.products.active}</b>
+                    p Dừng hoạt động: <b>#{statistic.products.inactive}</b>
+        
+        
+        
+        .col-6 
+            .card.mb-4 
+                .card-header Tài khoản admin
+                .card-body 
+                    p Số lượng: <b>#{statistic.account.total}</b>
+                    p Hoạt động:  <b>#{statistic.account.active}</b>
+                    p Dừng hoạt động: <b>#{statistic.account.inactive}</b>
+        
+
+        
+        .col-6 
+            .card.mb-4 
+                .card-header Tài khoản client
+                .card-body 
+                    p Số lượng: <b>#{statistic.user.total}</b>
+                    p Hoạt động:  <b>#{statistic.user.active}</b>
+                    p Dừngg hoạt động: <b>#{statistic.user.inactive}</b>
+        
