--- a/views/admin/pages/roles/edit.pug
+++ b/views/admin/pages/roles/edit.pug
@@ -1,7 +1,7 @@
 extends ../../layout/default.pug
 include ../../mixins/alert.pug
 block main 
- f(role.permissions.includes("roles_edit"))
+ if(role.permissions.includes("roles_edit"))
     +alert-error(3000)
     h1(class="mb-4") Sửa một sản phẩm 
     form(
