--- a/views/admin/patials/sider.pug
+++ b/views/admin/patials/sider.pug
@@ -18,6 +18,6 @@
             if(role.permissions.includes("account_view"))
                 li 
                   a(href=`${prefixAdmin}/account`) Danh sách tài khoản
-            if(role.permissions.includes("account_view"))
+            if(role.permissions.includes("permissions_setting"))
                 li 
                   a(href=`${prefixAdmin}/settings/general`) Cài đặt chung
